--- a/style.css
+++ b/style.css
@@ -33,20 +33,20 @@ video {
     top: 0;
     height: 100vh;
     width: 100vw;
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(31, 28, 28, 0.5);
 }
 
 .container {
     min-width: 580px;
     min-height: 304px;
-    color: black;
+    color: whitesmoke;
     margin: 0 auto;
     padding: 25px 50px;
     border-radius: 5px;
     z-index: 2;
     display: flex;
     justify-content: center;
-    background: rgba(255, 255, 255, 0.85);
+    background: rgba(0, 0, 0, 0.25);
 }
 
 .input-container {
@@ -88,7 +88,7 @@ button {
     margin-top: 15px;
     border: none;
     text-transform: uppercase;
-    background: #006959;
+    background: #02927c;
     color: white;
     cursor: pointer;
     outline: none;
